--- a/client.html
+++ b/client.html
@@ -13,7 +13,8 @@
   <title>CLIENTS</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css">
   <link rel="stylesheet" href="./styles.css">
-  <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <header>
   <nav class="navbar navbar-expand-md navbar-white bg-transparent px-md-4 py-4" aria-label="Fourth navbar example">
@@ -83,38 +84,38 @@
           <div class="card shadow-sm">
             <img src="./images/airtel.jpg">
           </div>
-          <h3 style="text-align: center;">AIRTEL</h3>
+          <h3 class="text-center pt-4">AIRTEL</h3>
         </div>
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/honneywell.png">
           </div>
-          <h3 style="text-align: center; font-weight: bolder;"> HONEYWELL</h3>
+          <h3 class="text-center pt-4"> HONEYWELL</h3>
           <br>
         </div>
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/shell.jpg">
           </div>
-          <h3 style="text-align: center; font-weight: bolder;">SHELL NIGERIA</h3>
+          <h3 class="text-center pt-4">SHELL NIGERIA</h3>
         </div>
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/AAUA.jpg">
           </div>
-          <h3 style="text-align: center; font-weight: bolder;"> ADEKUNLE AJASIN<br> UNIVERSITY</h3>
+          <h3 class="text-center pt-4"> ADEKUNLE AJASIN<br> UNIVERSITY</h3>
         </div>
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/eko electric.png">
           </div>
-          <h3 style="text-align: center; font-weight: bolder;">EKO ELECTRICITY</h3>
+          <h3 class="text-center pt-4">EKO ELECTRICITY</h3>
         </div>
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/ikeja.png">
           </div>
-          <h3 style="text-align: center; font-weight: bolder;">IKEJA ELECTRICITY</h3>
+          <h3 class="text-center pt-4">IKEJA ELECTRICITY</h3>
         </div>
       </div>
     </div>
@@ -145,7 +146,7 @@
           <a href="about-us.html" class="text-decoration-none">About Us</a>
         </p>
         <p>
-          <a href="products.html" class="text-decoration-none">Product</a>
+          <a href="products.html" class="text-decoration-none">Products</a>
         </p>
         <p>
           <a href="oilandgas.html" class="text-decoration-none">Services</a>
@@ -158,11 +159,11 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3 class="text-uppercase mb-3">Follow us on our socials</h3>
+        <h3 class="text-uppercase mb-3">Follow us on socials</h3>
         <ul class="list-unstyled d-flex">
           <ul class="list-unstyled d-flex">
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/doods_intl/">
                 <img src="./images/instagram.png" height="30px">
               </a>
             </li>
@@ -182,15 +183,15 @@
               </a>
             </li>
             <li class="ms-3">
-              <a href="#">
+              <a href="mailto:info@doodsltd.com">
                 <img src="./images/email.png" height="30px">
               </a>
             </li>
           </ul>
       </div>
     </div>
-    <div class="d-grid align-items-center justify-content-center">
-      <p>© 2023. All right reserved</p>
+    <div class="d-grid align-items-center justify-content-md-center">
+      <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
       <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
@@ -199,6 +200,7 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+<!-- <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
