--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
   <title>CONTACT US</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css">
   <link rel="stylesheet" href="./styles.css">
-  <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
 <header>
@@ -86,7 +87,7 @@
 </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row g-5">
     <div class="col-md-7">
       <h4>Get in touch</h4>
       <div class="mb-3">
@@ -113,7 +114,7 @@
       <div class="mt-4">
         <div class="d-flex">
           <i class="bi bi-geo-alt-fill"></i>
-          <p>Address: FeaturesDoods International Operations Limited
+          <p>Address: Doods International Operations Limited
             Portal House,
             5B, Adedeji Close,
             Opebi, Lagos State,
@@ -162,7 +163,7 @@
           <a href="about-us.html" class="text-decoration-none">About Us</a>
         </p>
         <p>
-          <a href="products.html" class="text-decoration-none">Product</a>
+          <a href="products.html" class="text-decoration-none">Products</a>
         </p>
         <p>
           <a href="oilandgas.html" class="text-decoration-none">Services</a>
@@ -175,11 +176,11 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3 class="text-uppercase mb-3">Follow us on our socials</h3>
+        <h3 class="text-uppercase mb-3">Follow us on socials</h3>
         <ul class="list-unstyled d-flex">
           <ul class="list-unstyled d-flex">
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/doods_intl/">
                 <img src="./images/instagram.png" height="30px">
               </a>
             </li>
@@ -199,15 +200,15 @@
               </a>
             </li>
             <li class="ms-3">
-              <a href="#">
+              <a href="mailto:info@doodsltd.com">
                 <img src="./images/email.png" height="30px">
               </a>
             </li>
           </ul>
       </div>
     </div>
-    <div class="d-grid align-items-center justify-content-center">
-      <p>© 2023. All right reserved</p>
+    <div class="d-grid align-items-center justify-content-md-center">
+      <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
       <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
@@ -219,6 +220,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+<!-- <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
