--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="aos-by-red.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <header>
   <nav class="navbar navbar-expand-md navbar-white bg-transparent px-md-4 py-4" aria-label="Fourth navbar example">
@@ -77,7 +78,7 @@
 </header>
 <!-- Banner Image  -->
 <div class="hero" data-aos="fade-up">
-  <h1 class="fw-bold text-white">It's a whole new <span class="typewriter"></span><br>with us<br><span class="fs-5"> - DIOL</span></h1>
+  <h1 class="fw-bold text-white">It's a whole new <span class="typewriter"></span><br>with us<br><span class="fs-5"> - DOODs</span></h1>
 </div>
 
 
@@ -101,7 +102,7 @@
         <p>Our mission is to consistently maintain customer satisfaction, trust and <br>
           integrity by delivering quality products and services conforming to<br> industry best practices and continuous
           process improvement.</p>
-        <a href="./products.html" class="btn">OUR SERVICES</a>
+        <a href="./products.html" class="btn text-uppercase">Our Products</a>
       </div>
     </div>
 </section>
@@ -109,33 +110,27 @@
 <div class="container" data-aos="fade-up">
   <div class="album py-5 bg-white">
     <div>
-      <h2 class="Strategy d-flex justify-content-center align-items-center">OUR STRATEGY</h2>
+      <h2 class="d-flex justify-content-center align-items-center pb-4">OUR STRATEGY</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
             <div class="card border-0"><img src="./images/strategy-img1.jpg"></div>
             <div class="p-4 pb-5 h-25 text-center">
-              <h3>SAFETY AND THE ENVIRONMENT</h3>
-              <p class="lead text-secondary">We relentlessly pursue our goal of providing an incident free work place for our
-                people at all times and at any location. We care about the safe management of the environment and will protect
-                it by conserving resources, reducing waste and preventing environmental pollution</p>
+              <h3>CUSTOMER SATISFACTION</h3>
+              <p class="lead text-secondary text-justify">We are committed to openly and honestly working with our clients and customers in order to build a longterm relationship and to develop and deliver the right solution that makes a real contribution to the competitiveness of our customers.</p>
             </div>
         </div>
         <div class="col">
             <div class="card border-0"><img src="./images/strategy-img2.jpg"></div>
             <div class="p-4 pb-5 text-center d-grid">
-              <h3>INTEGRITY</h3>
-              <p class="lead text-secondary">We apply the highest ethical standards to everything we do. Integrigty, honesty and
-                accountability are at the core of our business. We believe that by treating our clients and suppliers fairly and
-                with respect will earn their trust and we can build a sustainable sucess together.</p>
+              <h3>SAFE ENVIRONMENT</h3>
+              <p class="lead text-secondary text-justify">We relentlessly pursue our goal of providing an incident free work place for our people at all times and at any location. We care about the safe management of the environment and will protect it by conserving resources, reducing waste and preventing environmental pollution</p>
             </div>
         </div>
         <div class="col">
             <div class="card border-0"><img src="./images/strategy-img3.jpg"></div>
             <div class="p-4 pb-5 text-center d-grid">
-              <h3>CUSTOMER<br>SATISFACTION</h3>
-              <p class="lead text-secondary">We are committed to openly and honestly working with our clients and customers in
-                order to build a longterm relationship and to develop and deliver the right solution that makes a real
-                contribution to the competitiveness of our customers.</p>
+              <h3>INTEGRITY</h3>
+              <p class="lead text-secondary text-justify">We apply the highest ethical standards to everything we do. Integrigty, honesty and accountability are at the core of our business. We believe that by treating our clients and suppliers fairly and with respect will earn their trust and we can build a sustainable sucess together.</p>
             </div>
         </div>
       </div>
@@ -152,7 +147,7 @@
         expectations. Our team of highly competent and knowledgeable staff <br> remains our backbone. We appreciate and
         count on your support as we continue to grow together.</p>
       <div class="d-grid justify-content-center">
-        <a href="#" class="btn join-us-btn border-dark text-dark">JOIN US</a>
+        <a href="./about-us.html" class="btn join-us-btn border-white text-white text-uppercase">Learn More</a>
       </div>
     </div>
   </div>
@@ -181,7 +176,7 @@
           <a href="about-us.html" class="text-decoration-none">About Us</a>
         </p>
         <p>
-          <a href="products.html" class="text-decoration-none">Product</a>
+          <a href="products.html" class="text-decoration-none">Products</a>
         </p>
         <p>
           <a href="oilandgas.html" class="text-decoration-none">Services</a>
@@ -194,11 +189,11 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3 class="text-uppercase mb-3">Follow us on our socials</h3>
+        <h3 class="text-uppercase mb-3">Follow us on socials</h3>
         <ul class="list-unstyled d-flex">
           <ul class="list-unstyled d-flex">
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/doods_intl/">
                 <img src="./images/instagram.png" height="30px">
               </a>
             </li>
@@ -218,15 +213,15 @@
               </a>
             </li>
             <li class="ms-3">
-              <a href="#">
+              <a href="mailto:info@doodsltd.com">
                 <img src="./images/email.png" height="30px">
               </a>
             </li>
           </ul>
       </div>
     </div>
-    <div class="d-grid align-items-center justify-content-center">
-      <p>© 2023. All right reserved</p>
+    <div class="d-grid align-items-center justify-content-md-center">
+      <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
       <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
@@ -242,7 +237,7 @@
   });
 
   const worldElement = document.querySelector('.typewriter');
-  const words = ['experience', 'world', 'era'];
+  const words = ['world', 'ideal', 'era'];
   let wordIndex = 0;
   let charIndex = 0;
 
@@ -269,6 +264,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+<!-- <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
