--- a/oilandgas.html
+++ b/oilandgas.html
@@ -13,7 +13,8 @@
   <title>OIL AND GAS</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css">
   <link rel="stylesheet" href="./styles.css">
-  <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <header>
   <nav class="navbar navbar-expand-md navbar-white bg-transparent px-md-4 py-4" aria-label="Fourth navbar example">
@@ -74,41 +75,23 @@
   </nav>
 </header>
 
-<div class="px-4 pt-5 my-5 text-center border-bottom">
-  <center>
-    <h2 class="location">OIL AND GAS INDUSTRY</h2>
-  </center>
-  <div class="overflow-hidden" style="max-height: 70vh;">
-    <div class="container-fluid">
-      <img src="./images/OIL+AND+GAS.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image"
-        height="50%" width="70%" loading="lazy">
+<div class="text-center border-bottom pb-5">
+  <div class="container">
+    <center>
+      <h2 class="location">OIL AND GAS</h2>
+    </center>
+    <div>
+        <img src="./images/OIL+AND+GAS.jpg" class="img-fluid border rounded-3 mb-4" alt="Example image" width="100%" loading="lazy">
+      </div>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <p class="lead text-justify">DOODS Limited provides related equipment and spares, special solutions, and support services to all verticals of the oil and gas industry, from upstream exploration and production to midstream transmission and downstream refining. Our supply chain & services portfolio are used in multiple segment in the Oil & Gas industry. Our services are especially suited to the specific challenges of oil and gas applications.
+      </div>
+      <div class="col-md-6">
+        <p class="lead text-justify">Including high and low pressures, temperatures, and flow rates, as well as in abrasive media and corrosive and cryogenic environments. Our engineers are trained to help increase asset lifespan, extend run times, reduce maintenance time and costs, and lower risks.
+      </div>
     </div>
-  </div>
-  <div class="row featurette justify-content-center align-items-center">
-    <div class="col-md-4">
-
-      <p class="lead">At DOODSS we deliver services at all stages of the oil and gas lifecycle.
-        Our expertise covers all stages of the facility lifecycle, from concept design through to decommissioning.
-
-        We have a proven track record of working with a full range of oil and gas sector clients. For years we’ve helped
-        Oil and Gas companies improve their efficiency, while guiding them through technology improvements.
-
-        We ensure projects are delivered safely, without incident or impact on the environment, reduce costs, on budget,
-        boost efficiency and enhance productivity, while meeting corporate sustainability measures and compliance with
-        governmental guidelines.
-    </div>
-    <div class="col-md-4">
-
-      <p class="lead">All of our clients receive a single point of contact service from an experience account manager.
-        From tender response through to report sign off, we become an integral part of your project and guarantee that a
-        fully joined up and smooth transition of project phases is realised.
-
-        We also provide complete decision support, multidisciplinary design/projects, assurance and consultancy services
-        to our clients, which in turn uniquely positioned us in the industry having deep expertise in oil and gas
-        services.
-    </div>
-  </div>
-
+</div>
 </div>
 <footer data-aos="fade-up">
   <div class="container">
@@ -132,7 +115,7 @@
           <a href="about-us.html" class="text-decoration-none">About Us</a>
         </p>
         <p>
-          <a href="products.html" class="text-decoration-none">Product</a>
+          <a href="products.html" class="text-decoration-none">Products</a>
         </p>
         <p>
           <a href="oilandgas.html" class="text-decoration-none">Services</a>
@@ -145,11 +128,11 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3 class="text-uppercase mb-3">Follow us on our socials</h3>
+        <h3 class="text-uppercase mb-3">Follow us on socials</h3>
         <ul class="list-unstyled d-flex">
           <ul class="list-unstyled d-flex">
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/doods_intl/">
                 <img src="./images/instagram.png" height="30px">
               </a>
             </li>
@@ -169,15 +152,15 @@
               </a>
             </li>
             <li class="ms-3">
-              <a href="#">
+              <a href="mailto:info@doodsltd.com">
                 <img src="./images/email.png" height="30px">
               </a>
             </li>
           </ul>
       </div>
     </div>
-    <div class="d-grid align-items-center justify-content-center">
-      <p>© 2023. All right reserved</p>
+    <div class="d-grid align-items-center justify-content-md-center">
+      <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
       <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
@@ -187,6 +170,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+<!-- <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
