--- a/products.html
+++ b/products.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="aos-by-red.css">
-  <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
+  <!-- <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <header>
   <nav class="navbar navbar-expand-md navbar-white bg-transparent px-md-4 py-4" aria-label="Fourth navbar example">
@@ -75,130 +76,119 @@
   </nav>
 </header>
 <section class="product">
-  <div class="metering" id="metering">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/flow-meters.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">FLOW METERING EQUIPMENTS</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
+  <div class="bg-orange text-center p-5">
+    <h2>Products</h2>
+  </div>
+  <div class="container">
+    <div class="metering" id="metering">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/flow-meters.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+              height="500" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">FLOW METERING EQUIPMENTS</h3>
+            <p class="lead">Unlock precise flow measurement and control with our cutting-edge Flow Metering Equipment. From precision instruments to versatile solutions, we offer a wide range of devices to meet your specific needs. Whether you're in need of digital displays, portable options, or corrosion-resistant equipment, our reliable and user-friendly solutions ensure accurate measurements across various fluids. Streamline your operations and optimize efficiency with our state-of-the-art Flow Metering Equipment.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="valves" id="valves">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">VALVES AND CONTROL</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
-        </div>
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/control-valves.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
+    <div class="valves" id="valves">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">VALVES AND CONTROL</h3>
+            <p class="lead">Experience precise flow control with our quality Valves and Control solutions. From manual to automated options, our reliable products cater to diverse industries. Achieve efficient flow management with our durable and precise valves. Enhance control and optimize operations with our advanced solutions.</p>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/control-valves.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+              height="500" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="powergen" id="powergen">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/power-generation-main.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-            width="700" height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">POWER GENERATION EQUIPMENTS</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <div class="powergen" id="powergen">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/power-generation-main.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              width="700" height="500" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">POWER GENERATION EQUIPMENTS</h3>
+            <p class="lead">Power up your operations with our advanced Power Generation Equipment. From generators to turbines, our reliable solutions meet diverse power needs. Experience efficient and dependable power generation for industrial, commercial, or residential applications. Trust our trusted power solutions for enhanced productivity and minimal downtime..</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="powertrans" id="powertrans">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
-        </div>
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/transmission-distribution.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-            width="700" height="500" loading="lazy">
+    <div class="powertrans" id="powertrans">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</h3>
+            <p class="lead">Efficiently transmit and distribute power with our advanced equipment. From transformers to switchgear, our solutions ensure reliable electricity flow. Maximize energy efficiency and minimize downtime with our trusted offerings. Experience superior performance and seamless power management with our industry-leading equipment.</p>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/transmission-distribution.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              width="700" height="500" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="mechanical" id="mechanical">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/mech.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <div class="mechanical" id="mechanical">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/mech.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+              height="500" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</h3>
+            <p class="lead">Experience reliable Mechanical and Electrical Equipment. From components to devices, our solutions ensure smooth operations. Trust our industry-leading products for efficiency and durability. Simplify your projects with our reliable equipment.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="instrumentation" id="instrumentation">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">INSTRUMENTATION SPARES <br>AND EQUIPMENTS</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
-        </div>
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/Instrumentation_Equipment_.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-            width="700" height="500" loading="lazy">
+    <div class="instrumentation" id="instrumentation">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">INSTRUMENTATION SPARES <br>AND EQUIPMENTS</h3>
+            <p class="lead">Find the perfect instrumentation spares and equipment for your needs. Our range includes a wide selection of high-quality components to support your instrumentation systems. From spare parts to complete equipment, we provide reliable solutions for precise measurements and control. Trust our trusted products to enhance the performance and reliability of your instrumentation setup.</p>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/Instrumentation_Equipment_.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+              width="700" height="500" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="pipes" id="pipes">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/pipessssss.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">PIPING FITTING AND FLANGES</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <div class="pipes" id="pipes">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/pipessssss.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+              height="500" loading="lazy">
+          </div>
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">PIPING FITTING AND FLANGES</h3>
+            <p class="lead">Discover a comprehensive selection of Piping Fittings and Flanges for your piping systems. Our range includes high-quality fittings and flanges to ensure secure connections and efficient fluid flow. With precision engineering and durable materials, our products deliver reliability and longevity. Trust our trusted solutions to optimize your piping infrastructure and ensure seamless operations.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="pump" id="pump">
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-lg-6">
-          <h2 class="display-5 fw-bold lh-1 mb-3">PUMP AND COMPRESSOR</h2>
-          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.</p>
-        </div>
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/pump.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
+    <div class="pump" id="pump">
+      <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6">
+            <h3 class="display-5 fw-bold lh-1 mb-3">PUMP AND COMPRESSOR</h3>
+            <p class="lead">Enhance fluid dynamics with our advanced Pump and Compressor solutions. From powerful pumps to efficient compressors, our range offers reliable equipment for various applications. Experience optimal performance, energy efficiency, and durability with our industry-leading products. Trust our trusted solutions to meet your pumping and compression needs, delivering reliable and efficient operation.</p>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="./images/pump.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+              height="500" loading="lazy">
+          </div>
         </div>
       </div>
     </div>
@@ -227,7 +217,7 @@
           <a href="about-us.html" class="text-decoration-none">About Us</a>
         </p>
         <p>
-          <a href="products.html" class="text-decoration-none">Product</a>
+          <a href="products.html" class="text-decoration-none">Products</a>
         </p>
         <p>
           <a href="oilandgas.html" class="text-decoration-none">Services</a>
@@ -240,11 +230,11 @@
         </p>
       </div>
       <div class="col-lg-4">
-        <h3 class="text-uppercase mb-3">Follow us on our socials</h3>
+        <h3 class="text-uppercase mb-3">Follow us on socials</h3>
         <ul class="list-unstyled d-flex">
           <ul class="list-unstyled d-flex">
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/doods_intl/">
                 <img src="./images/instagram.png" height="30px">
               </a>
             </li>
@@ -264,15 +254,15 @@
               </a>
             </li>
             <li class="ms-3">
-              <a href="#">
+              <a href="mailto:info@doodsltd.com">
                 <img src="./images/email.png" height="30px">
               </a>
             </li>
           </ul>
       </div>
     </div>
-    <div class="d-grid align-items-center justify-content-center">
-      <p>© 2023. All right reserved</p>
+    <div class="d-grid align-items-center justify-content-md-center">
+      <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
       <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
@@ -288,6 +278,7 @@
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
+<!-- <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </html>
